# AnyRepoAI

./: .env.example  .gitignore  README.md  SCANNER_IMPLEMENTATION.md  docker-compose.yml  pyproject.toml
backend/: .env.example  __init__.py  alembic.ini  debug_neighbors.py  debug_neighbors_repo.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_create_repositories_table.py  002_create_repository_files_table.py  003_create_intelligence_tables.py  004_create_symbol_index_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  exception_handlers.py  router.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  scanner_config.py
backend/app/db/: __init__.py  base.py  health.py  session.py
backend/app/dependencies/: __init__.py  database.py  infrastructure.py
backend/app/graph/: __init__.py
backend/app/health/: __init__.py
backend/app/infrastructure/: __init__.py  git_client.py  (+4 more)
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: architecture.md  graph-readme.md  intelligence-readme.md  repository-readme.md  scanner-readme.md  symbol-index-readme.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: debug_neighbors.py  dev.py  init_db.py  migrate.sh  start-dev.sh  start_backend.py
scripts/postgres/: init.sql
tests/: conftest.py
tests/integration/: test_repository_api.py  test_scanner_api.py
tests/unit/: conftest.py  test_github_client.py  test_language_detection.py  test_repository_schemas.py  test_repository_service.py  test_scanner_large_repo.py  test_scanner_service.py
(+131 files in other folders)
