[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-intelligence-platform"
version = "0.1.0"
description = "Production-grade AI Codebase Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "httpx==0.27.0",

    # Configuration
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",

    # Database
    "sqlalchemy==2.0.31",
    "alembic==1.13.2",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",

    # Redis
    "redis==5.0.7",
    "hiredis==2.3.2",

    # Qdrant
    "qdrant-client==1.10.1",

    # Neo4j
    "neo4j==5.22.0",

    # Logging
    "structlog==24.2.0",
    "python-json-logger==2.0.7",

    # Utilities
    "python-ulid==2.7.0",
    "tenacity==8.4.1",
    "python-multipart==0.0.9",

    # Repository Management
    "gitpython==3.1.43",
    "celery==5.4.0",
    "flower==2.0.1",

    # Code Intelligence Engine — tree-sitter parsing
    "tree-sitter==0.21.3",
    "tree-sitter-languages==1.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.5.0",
    "mypy==1.10.1",
    "pre-commit==3.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
